--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="img/brafe.png" alt="Brafé">
         </a>
 
-        <nav>
+        <nav class="header-menu">
             <ul>
                 <li><a href="#">Cafés</a></li>
                 <li><a href="#">Capuccinos</a></li>
@@ -29,8 +29,8 @@
 
     </header>
 
-    <div>
-        <nav>
+    <div class="container">
+        <nav class="filtro">
             <h2>Preço</h2>
             <ul>
                 <li>$</li>
@@ -38,10 +38,10 @@
                 <li>$$$</li>
             </ul>
             <h2>Sabor</h2>
-            <ul>
-                <ul>Marrom</ul>
-                <ul>Laranja</ul>
-                <ul>Amarelo</ul>
+            <ul class="sabor">
+                <ul><span class="sabor-3">Marrom</span></ul>
+                <ul><span class="sabor-4">Laranja</span></ul>
+                <ul><span class="sabor-5">Amarelo</span></ul>
             </ul>
             <h2>Tempo</h2>
             <ul>
